--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,15 @@
 [versions]
 agp = "8.5.1"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
-appcompat = "1.6.1"
+appcompat = "1.7.0"
 composeBom = "2024.06.00"
+lifecycleRuntimeCompose = "2.8.4"
 material3 = "1.2.1"
 tvFoundation = "1.0.0-alpha11"
 tvMaterial = "1.0.0-rc01"
-lifecycleRuntimeKtx = "2.8.3"
-activityCompose = "1.9.0"
+lifecycleRuntimeKtx = "2.8.4"
+activityCompose = "1.9.1"
 accompanistSystemuicontroller = "0.34.0"
 googleGmsGoogleServices = "4.4.2"
 kotlinxSerializationJson = "1.6.3"
@@ -21,10 +22,10 @@ retrofit = "2.11.0"
 retrofit2KotlinxSerializationConverter = "1.0.0"
 datastorePreferences = "1.1.1"
 coilCompose = "2.6.0"
-pagingCompose = "3.3.0"
-media3Exoplayer = "1.3.1"
+pagingCompose = "3.3.1"
+media3Exoplayer = "1.4.0"
 material = "1.6.8"
-compose-foundation = "1.7.0-beta05"
+compose-foundation = "1.7.0-beta06"
 firebaseBom = "33.1.2"
 firebaseAnalytics = "22.0.2"
 firebaseCrashlytics = "19.0.3"
@@ -35,6 +36,7 @@ accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
@@ -76,6 +78,7 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
 google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "googleFirebaseCrashlytics" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 
 
